--- a/app/nav-sidebar/sidebar.style.css
+++ b/app/nav-sidebar/sidebar.style.css
@@ -62,10 +62,6 @@ body {
     list-style: none;
 }
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
 
 .sidebar-nav li a {
     display: block;
@@ -73,28 +69,49 @@ body {
     color: #999999;
 }
 
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
+
+.sidebar-nav .list-group-item{
+	background: none;
+	border:none;
+	padding:0;	
+	
+	text-indent: 20px; 
+    line-height: 60px; 
+}
+
+.sidebar-nav .list-group-item:last-child{
+	border-radius: 0px;
+}
+
+.sidebar-nav li.list-group-item:hover{
+	background:rgba(255,255,255,0.2);	
+}
+.sidebar-nav li.list-group-item:hover a{
+	color: #fff;
+}
+
+.sidebar-nav .list-group-item.heading,
+.sidebar-nav .list-group-item.heading:hover{
+	color: #999999;
     height: 65px;
     font-size: 18px;
     line-height: 60px;
+	background:none;
+	
+	padding: 5px 20px;
 }
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
+.sidebar-nav .list-group-item.heading #sidebar-close i{
+	cursor:pointer;
 }
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
+.sidebar-nav .list-group-item.heading #sidebar-close:hover{
+	color: #fff;
     background: none;
 }
+
